Remove the id's in buttons
Removed the id's in buttons and changed them for a class that
is common for all to allow for querySelectorAll() in JS.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="rock-button">Rock</button>
-    <button id="paper-button">Paper</button>
-    <button id="scissors-button">Scissors</button>
+    <button class="button" value="rock">Rock</button>
+    <button class="button" value="rock">Paper</button>
+    <button class="button" value="scissors">Scissors</button>
     <script src="./script.js"></script>
 </body>
 </html>
