Added more elements in index.html
Added a div which contains the results of the game and in it, Added
elements that each contains the scores for both players, as well as
the current result and the final result.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <button class="button" value="rock">Rock</button>
     <button class="button" value="rock">Paper</button>
     <button class="button" value="scissors">Scissors</button>
+    <div class="results">
+        <div>Your score: <span id="player-score">0</span></div>
+        <div>Opponent score: <span id="computer-score">0</span></div>
+        <div id="current-result"></div>
+        <div id="final-result"></div>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
